Contact Us Page content again

--- a/MVCProject/MVCProject/Views/Home/Contact.cshtml
+++ b/MVCProject/MVCProject/Views/Home/Contact.cshtml
@@ -16,5 +16,5 @@
         <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
         <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
     </address>
-    <p>One of the most valuable pages on a website is the Contact Us page. It provides a direct communication channel to collect customer feedback, gather leads, and unlock new opportunities.</p>
+    <p>One of the most valuable pages on a website is the Contact Us page. It provides a direct communication channel to collect customer feedback,  and unlock new opportunities.</p>
 </main>
